Fixed carousel prev button alignment

--- a/less/carousel.less
+++ b/less/carousel.less
@@ -123,6 +123,13 @@
                         width: 100%;
                     }
                 }
+                &.left{
+                    img {
+                        @media screen and (min-width: 501px) {
+                            padding-left:16px;
+                        }
+                    }
+                }
             }
         }
         .carousel-aside-container {
